added JVM options